# fastapi-auth-web

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
configuration/: parameters.dev.yaml  parameters.test.yaml  parameters.yaml
docs/: database_setup_guide.md  debugging_sql_queries.md  naming_conventions.md  querying_in_postgresql.md
scripts/: initialize_postgres_db_local.sh  run_all_migrations_local.sh  start.py
src/: config.py  main.py
src/apps/auth/: __init__.py  config.py  dependencies.py
src/apps/auth/endpoints/: login.py  organization.py  user.py
src/apps/auth/migrations/: 1697409109-add_users_table.sql  1711564562-add_organizations_table.sql  1712273685-add_organization_column_to_users_table.sql  1713013148-add_indexes_on_created_at_on_organization_and_users.sql  1713013262-add_index_on_email_in_users_table.sql  1716826732-make_organization_name_unique.sql
src/apps/auth/models/: organization.py  user.py
src/apps/auth/orm/: mappers.py  organizations.py  users.py
src/apps/auth/repository/: organizations.py  users.py
src/lib_auth/: api_key_checker.py  jwt.py  password.py  roles.py  user.py
src/lib_config/: config.py
src/lib_fastapi/: auth.py  request.py
src/lib_utils/: collections.py  exceptions.py  gsheet.py
tests/: conftest.py
tests/apps/auth/: conftest.py
tests/apps/auth/endpoints/: test_login.py  test_organization.py  test_user.py
tests/apps/auth/models/: test_organization.py  test_user.py
tests/apps/auth/orm/: test_organizations.py
tests/test_utils/: jwt.py  user.py
(+2 files in other folders)
