[tool.poetry]
name = "fastapi-auth-web"
version = "0.1.0"
description = "A FastAPI based Authentication Web Server"
authors = ["George Mathews <geomatthews@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = {extras = ["asyncio", "psycopg2"], version = "^2.0.31"}
fastapi = "^0.111.1"
loguru = "^0.7.2"
cryptography = "^42.0.8"
pyjwt = "^2.8.0"
deepmerge = "^1.1.1"
asyncpg = "^0.29.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
ruff = "^0.5.2"
pytest = {extras = ["pytest-asyncio"], version = "^8.2.2"}
mypy = "^1.10.1"
pytest-asyncio = "^0.23.7"
types-pyyaml = "^6.0.12.20240311"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.poetry.scripts]
start = "src.main:start"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
exclude = "^(.*\\.md|.*\\.yaml|.*\\.lock|.*\\.ini)$"

[tool.ruff]
extend-exclude = ["*.yaml", "poetry.lock", "pyproject.toml", "README.md"]
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"